# naleh

./: Cargo.toml
database/Jasmine (Glycerine Face wash bar)/: user.json
database/Kupaimeni (Glycerine Face wash bar)/: user.json
database/Orange (Glycerine Face wash bar)/: user.json
database/Pink wine (Glycerine Face wash bar)/: user.json
database/Red wine/: user.json
database/Red wine (Glycerine Face wash bar)/: user.json
database/Sandel (Glycerine Face wash bar)/: user.json
src/: main.rs
static/: about.html  admin.html  colors.css  home.html  return.html  shipment.html  shop.html  static.js  style.css
