[package]
name = "website"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.9.0"
tokio = "1.43.0"
env_logger = "0.11.8"
log = "0.4"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
actix-multipart = "0.7.2"
zip = "2.5.0"
futures-util = "0.3.31"
sanitize-filename = "0.6.0"
